# linear-arrangement-library

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT  Makefile  README.md  TODO  apply_lal_style.sh  clean_builds.sh  compile_cluster.sh  make_cpp_bibliography.py  make_docs.sh  make_makefiles_cluster.sh  submit_compilation.sh
lal/: .clang-format  .clangd  C.hpp  CMakeLists.txt  D.hpp  basic_types.hpp  bibliography.cpp  bibliography.hpp  bibliography_entries.hpp  definitions.hpp  dgraph.cpp  dgraph.hpp  edge_iterator.cpp  edge_iterator.hpp  generate.hpp  generation.hpp  graph.cpp  graph.hpp  graphs.hpp  io.hpp  iterators.hpp  lal.pro  lal_version.hpp  license_header  linarr.hpp  linear_arrangement.hpp  namespaces.hpp  numeric.hpp  properties.hpp  rooted_directed_tree.cpp  rooted_directed_tree.hpp  ugraph.cpp  ugraph.hpp  utilities.hpp
lal/conversions/: conversions.cpp  conversions.hpp
lal/detail/: arrangement_wrapper.hpp  array.hpp  avl.hpp  bibliography.hpp  data_array.hpp  identity_arrangement.hpp  linear_queue.hpp  linear_set.hpp  macros.hpp  make_array.hpp  pairs_utils.hpp  queue_array.hpp  set_array.hpp  sorted_vector.hpp
lal/documentation/: page_concepts.dox  page_main.dox  page_namespace_lal.dox  page_namespace_lal_detail.dox  page_namespace_lal_generate.dox  page_namespace_lal_graphs.dox  page_namespace_lal_io.dox  page_namespace_lal_iterators.dox  page_namespace_lal_linarr.dox  page_namespace_lal_numeric.dox  page_namespace_lal_properties.dox  page_namespace_lal_utilities.dox  page_notation.dox  page_user_defined_literals.dox
lal/generate/: all_arrangements.cpp  all_arrangements.hpp  all_bipartite_arrangements.cpp  all_bipartite_arrangements.hpp  all_lab_free_trees.cpp  all_lab_free_trees.hpp  all_lab_rooted_trees.cpp  all_lab_rooted_trees.hpp  all_planar_arrangements.cpp  all_planar_arrangements.hpp  all_projective_arrangements.cpp  all_projective_arrangements.hpp  all_ulab_free_bistar_trees.cpp  all_ulab_free_bistar_trees.hpp  all_ulab_free_trees.cpp  all_ulab_free_trees.hpp  all_ulab_rooted_trees.cpp  all_ulab_rooted_trees.hpp  rand_arrangements.cpp  rand_arrangements.hpp  rand_arrangements_projective.cpp  rand_bipartite_arrangements.cpp  rand_bipartite_arrangements.hpp  rand_lab_free_trees.cpp  rand_lab_free_trees.hpp  rand_lab_rooted_trees.cpp  rand_lab_rooted_trees.hpp  rand_planar_arrangements.cpp  rand_planar_arrangements.hpp  rand_projective_arrangements.cpp  rand_projective_arrangements.hpp  rand_ulab_free_trees.cpp  rand_ulab_free_trees.hpp  rand_ulab_rooted_trees.cpp  rand_ulab_rooted_trees.hpp  tree_gen.hpp  tree_generator.hpp  tree_generator_type.hpp
lal/generation/: all_lab_free_trees.cpp  all_lab_free_trees.hpp  all_ulab_free_trees.cpp  all_ulab_free_trees.hpp  all_ulab_rooted_trees.cpp  all_ulab_rooted_trees.hpp  free_lab_trees.cpp  free_lab_trees.hpp  free_ulab_trees.cpp  free_ulab_trees.hpp  lab_free_trees.cpp  lab_free_trees.hpp  rand_free_lab_trees.cpp  rand_free_lab_trees.hpp  rand_free_ulab_trees.cpp  rand_free_ulab_trees.hpp  rand_lab_dir_rooted_trees.cpp  rand_lab_dir_rooted_trees.hpp  rand_lab_free_trees.cpp  rand_lab_free_trees.hpp  rand_lab_rooted_trees.cpp  rand_lab_rooted_trees.hpp  rand_rooted_lab_dir_trees.cpp  rand_rooted_lab_dir_trees.hpp  rand_ulab_free_trees.cpp  rand_ulab_free_trees.hpp  rand_ulab_rooted_trees.cpp  rand_ulab_rooted_trees.hpp  ulab_free_trees.cpp  ulab_free_trees.hpp
lal/graphs/: bipartite_graph_colorability.cpp  bipartite_graph_colorability.hpp  bipartite_graph_coloring.hpp  conversions.cpp  conversions.hpp  dgraph.cpp  dgraph.hpp  directed_graph.cpp  directed_graph.hpp  drtree.cpp  drtree.hpp  dtree.cpp  dtree.hpp  free_tree.cpp  free_tree.hpp  ftree.cpp  ftree.hpp  graph.cpp  graph.hpp  graph_coloring.hpp  output.hpp  rdtree.cpp  rdtree.hpp  rooted_directed_tree.cpp  rooted_directed_tree.hpp  rooted_tree.cpp  rooted_tree.hpp  rtree.cpp  rtree.hpp  rutree.cpp  rutree.hpp  tree.cpp  tree.hpp  tree_literals.cpp  tree_literals.hpp  tree_type.hpp  ugraph.cpp  ugraph.hpp  undirected_graph.cpp  undirected_graph.hpp  (+4 more)
lal/internal/: avl.hpp  data_array.hpp  macros.hpp  make_array.hpp  make_array_with_value.hpp  sorted_vector.hpp  std_utils.hpp
lal/io/: basic_output.cpp  basic_output.hpp  check_correctness.cpp  check_correctness.hpp  dataset_error.hpp  edge_list.cpp  edge_list.hpp  head_vector.cpp  head_vector.hpp  head_vector_error.hpp  head_vector_error_type.hpp  process_treebank_base.hpp  report_correctness.hpp  stdout.hpp  treebank_collection_processor.cpp  treebank_collection_processor.hpp  treebank_collection_reader.cpp  treebank_collection_reader.hpp  treebank_collection_report.hpp  treebank_collection_report_location.hpp  treebank_dataset.cpp  treebank_dataset.hpp  treebank_dataset_processor.cpp  treebank_dataset_processor.hpp  treebank_dataset_reader.cpp  treebank_dataset_reader.hpp  treebank_error.hpp  treebank_error_type.hpp  treebank_feature.hpp  treebank_feature_type.hpp  treebank_file_error.hpp  treebank_file_error_type.hpp  treebank_file_report.hpp  treebank_processing.cpp  treebank_processing.hpp  treebank_processor.cpp  treebank_processor.hpp  treebank_processor_base.hpp  treebank_reader.cpp  treebank_reader.hpp
lal/iterators/: E_iterator.cpp  E_iterator.hpp  Q_iterator.cpp  Q_iterator.hpp  edge_iterator.cpp  edge_iterator.hpp
lal/linarr/: 1level.hpp  1level_impl.hpp  2level.hpp  2level_impl.hpp  C.cpp  C.hpp  C_approx.cpp  C_brute_force.cpp  C_dyn_prog.cpp  C_ladder.cpp  C_q.cpp  C_stack_based.cpp  D.cpp  D.hpp  DMax.cpp  DMax.hpp  Dmin.cpp  Dmin.hpp  Dmin_Planar.cpp  Dmin_Projective.cpp  Dmin_Unconstrained_FC.cpp  Dmin_Unconstrained_YS.cpp  algorithms_C.hpp  algorithms_Dmin.hpp  algorithms_Dmin_planar.hpp  algorithms_Dmin_projective.hpp  algorithms_chunking.hpp  algorithms_crossings.hpp  approx_C.cpp  chunking.cpp  chunking.hpp  classification.cpp  classification.hpp  classify_syntactic_dependency_structure.cpp  classify_syntactic_dependency_structure.hpp  dependency_flux.cpp  dependency_flux.hpp  dependency_flux_compute.hpp  flux.cpp  flux.hpp  (+16 more)
lal/numeric/: concepts.hpp  gmp_utils.cpp  (+9 more)
(+542 files in other folders)
